Add troubleshooting section for macOS SIGBUS crash in README
Co-authored-by: HungLo2020 <159678011+HungLo2020@users.noreply.github.com>